2015-06-04 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Reset gui  if an file creation error occours.

2015-04-28 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* English.lproj/MainMenu.nib/keyedobjects.nib
	Add 100 and 200 sizes.

2015-04-28 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Pools need to be drained, not released, since they don't get retained.

2015-04-23 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	Stop support in delete.

2015-04-23 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	Stop support in update.

2015-04-17 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* English.lproj/MainMenu.nib
	Allow stop of insert.

2015-04-16 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* English.lproj/MainMenu.nib
	QuickDelete executes in own thread.

2015-04-15 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	* English.lproj/MainMenu.nib
	Execute selectIdentify in a separate thread and allow interruption

2015-04-14 Riccardo Mottola <rm@gnu.org>

	* DBProgress.h
	* DBProgress.m
	Implement stop mechanisms.

	* DBLogger.m
	Scroll text on the main thread.

2014-10-23 Riccardo Mottola <rm@gnu.org>

	* Preferences.h
	* Preferences.m
	* Resources/Preferences.gorm
	Remove https preference, since it is now forced to YES always.

2014-10-23 Riccardo Mottola <rm@gnu.org>

	* Preferences.h
	* Preferences.m
	* Resources/Preferences.gorm
	New Down Batch Size preference.

	* AppController.m
	Get login URLs from DataBasinKit (new methods) instead of hard-coding strings.

2014-09-09 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Set CSV Reader qualifier and separator

2014-09-02 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* Preferences.m
	Use correct Defaults methods and not valueForKey

2014-09-02 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Access dictionary in standard way.

2014-09-01 Riccardo Mottola <rm@gnu.org>
